<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ingrese_un_nombre"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ingrese_un_tipo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbtn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perro" />

            <RadioButton
                android:id="@+id/rbtn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gato" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/seleccione_su_sexo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/macho" />

        <CheckBox
            android:id="@+id/chbox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hembra" />

        <Button
            android:id="@+id/btn_agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/agregar"
            android:textColor="#000000"
            app:backgroundTint="#69AC94"
            app:iconTint="#000000"
            app:layout_constraintTop_toBottomOf="@+id/chbox2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>